Update CI workflow for MLflow model training

--- a/.github/workflows/preprocess_ci.yml
+++ b/.github/workflows/preprocess_ci.yml
@@ -1,14 +1,11 @@
-name: Preprocess Dataset
+name: MLflow CI Training
 
 on:
   push:
-    paths:
-      - "preprocessing/**"
-      - ".github/workflows/preprocess_ci.yml"
   workflow_dispatch:
 
 jobs:
-  preprocessing:
+  train-model:
     runs-on: ubuntu-latest
 
     steps:
@@ -22,14 +19,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install pandas seaborn matplotlib scikit-learn joblib
+          pip install mlflow scikit-learn pandas numpy matplotlib seaborn joblib optuna dagshub
 
-      - name: Run preprocessing script
+      - name: Run MLflow Project
         run: |
-          python preprocessing/automate_FuadHasanWirayudha.py
-
-      - name: Upload cleaned dataset artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: cleaned-pima-dataset
-          path: cleaned_pima_diabetes_fuad.csv
+          mlflow run MLProject --env-manager=local
