--- a/.github/workflows/ci_mlflow.yml
+++ b/.github/workflows/ci_mlflow.yml
@@ -2,6 +2,7 @@ name: MLflow CI Training
 
 on:
   push:
+    branches: [ "main" ]
   workflow_dispatch:
 
 jobs:
@@ -19,13 +20,22 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install mlflow scikit-learn pandas numpy matplotlib seaborn joblib optuna dagshub
+          python -m pip install --upgrade pip
+          pip install mlflow==2.22.4 scikit-learn pandas numpy matplotlib seaborn joblib optuna
 
-      - name: Set DagsHub credentials
+      - name: Export DagsHub credentials (for MLflow REST auth)
         run: |
-          echo "MLFLOW_TRACKING_USERNAME=Fuadhsnn" >> $GITHUB_ENV
+          echo "DAGSHUB_USERNAME=${{ secrets.DAGSHUB_USERNAME }}" >> $GITHUB_ENV
+          echo "DAGSHUB_TOKEN=${{ secrets.DAGSHUB_TOKEN }}" >> $GITHUB_ENV
+          echo "MLFLOW_TRACKING_USERNAME=${{ secrets.DAGSHUB_USERNAME }}" >> $GITHUB_ENV
           echo "MLFLOW_TRACKING_PASSWORD=${{ secrets.DAGSHUB_TOKEN }}" >> $GITHUB_ENV
 
       - name: Run MLflow Project
+        env:
+          DAGSHUB_USERNAME: ${{ secrets.DAGSHUB_USERNAME }}
+          DAGSHUB_TOKEN: ${{ secrets.DAGSHUB_TOKEN }}
+          MLFLOW_TRACKING_USERNAME: ${{ secrets.DAGSHUB_USERNAME }}
+          MLFLOW_TRACKING_PASSWORD: ${{ secrets.DAGSHUB_TOKEN }}
         run: |
-          mlflow run MLProject --env-manager=local
+          cd MLProject
+          mlflow run . --env-manager=local
