--- a/.github/workflows/ci_mlflow.yml
+++ b/.github/workflows/ci_mlflow.yml
@@ -21,21 +21,26 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install mlflow==2.22.4 scikit-learn pandas numpy matplotlib seaborn joblib optuna
+          pip install \
+            mlflow==2.22.4 \
+            scikit-learn \
+            pandas \
+            numpy \
+            matplotlib \
+            seaborn \
+            joblib \
+            optuna \
+            dagshub
 
-      - name: Export DagsHub credentials (for MLflow REST auth)
+      - name: Export DagsHub credentials
         run: |
           echo "DAGSHUB_USERNAME=${{ secrets.DAGSHUB_USERNAME }}" >> $GITHUB_ENV
           echo "DAGSHUB_TOKEN=${{ secrets.DAGSHUB_TOKEN }}" >> $GITHUB_ENV
           echo "MLFLOW_TRACKING_USERNAME=${{ secrets.DAGSHUB_USERNAME }}" >> $GITHUB_ENV
           echo "MLFLOW_TRACKING_PASSWORD=${{ secrets.DAGSHUB_TOKEN }}" >> $GITHUB_ENV
+          echo "MLFLOW_TRACKING_URI=https://dagshub.com/Fuadhsnn/Eksperimen_SML_FuadHasanWirayudha.mlflow" >> $GITHUB_ENV
 
       - name: Run MLflow Project
-        env:
-          DAGSHUB_USERNAME: ${{ secrets.DAGSHUB_USERNAME }}
-          DAGSHUB_TOKEN: ${{ secrets.DAGSHUB_TOKEN }}
-          MLFLOW_TRACKING_USERNAME: ${{ secrets.DAGSHUB_USERNAME }}
-          MLFLOW_TRACKING_PASSWORD: ${{ secrets.DAGSHUB_TOKEN }}
         run: |
           cd MLProject
           mlflow run . --env-manager=local
